--- a/charity.css
+++ b/charity.css
@@ -49,42 +49,22 @@ body{
 }
 .navbar .container-fluid{
   margin: auto 100px;
-  align-items: center;
 }
 .navbar .container-fluid .navbar-header .navbar-brand{
     font-weight: 700;
 }
-.navbar .container-fluid .icon-menu{
-  justify-content: center;
-  padding: 5px 20px 0;
-
-}
-.navbar-right{
-  display: inline-block;
-}
 /* Home */
 .home .free-collection{
-    height: auto;
-    max-width: 100vw;
+    height: 100vh;
+    width: 100vw;
     background-color: var(--primary-color);
-    display: flex;
-    /* flex-wrap: wrap; */
-    padding-top: 250px;
-    align-content: center;
-}
-.home .free-collection .col-2{
-  flex-basis: 50%;
-  /* min-width: 400px; */
-  margin: 0 50px;
-  /* width: calc(100%/2); */
-  width: 100%;
 }
 .home .free-collection .detail{
-   /*  position: relative;
+    position: relative;
     top: 50%;
-    left: 5%; */
+    left: 5%;
     transform: translateY(-50%);
-    /* display: block; */
+    display: block;
 }
 .home .detail .slogan{
     font-size: 50px;
@@ -94,12 +74,11 @@ body{
 .home .detail .script{
     color: var(--white);
 }
-.home .free-collection .col-2 img{
-   /*  width: 600px;
+.home .free-collection img{
+    width: 600px;
     position: relative;
     top: 40%;
-    left: 55%; */
-    width: 100%;
+    left: 55%;
     transform: translateY(-50%);
 }
 .home .free-collection .detail .btn{
@@ -127,27 +106,19 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    align-content: center;
-    justify-content: space-around;
-}
-.home .transfer .col-3{
-  width: calc(100%/2);
 }
 .home .transfer .card{
-   /*  position: relative;
+    position: relative;
     top: 40%;
-    left: 10%; */
+    left: 10%;
     transform: translateY(-50%);
-    max-width: 500px;
-    max-height: 250px;
+    width: 500px;
+    height: 250px;
 }
 .home .transfer .detail{
-   /*  position: relative;
+    position: relative;
     top: 50%;
-    left: 50%; */
+    left: 50%;
     transform: translateY(-50%);
     color: var(--primary-color);
 }
@@ -365,85 +336,3 @@ footer{
       margin: 5px 0;
     }
   }
-
- @media only screen and (max-width: 800px) {
-  .free-collection{
-    /* padding: 200px 20px 0; */
-    /* flex-direction: column; */
-    align-content: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 160px;
-  }
-
-  .free-collection .detail .slogan{
-    font-size: 30px;
-  }
-  .col-2{
-
-    padding: 10px 0;
-    min-width: 300px;
-   }
-   .col-2 img {
-    min-width: 310px;
-    margin-bottom: 50px;
-   }
-
-   .home .transfer{
-    height: 90vh;
-   }
-   .home .transfer .col-3{
-    width: calc(100%/1);
-   }
-   .home .transfer .detail {
-    margin-bottom: 80px;
-
-   }
-
-   .home .transfer .detail .slogan{
-    font-size: 30px;
-
-   }
-   .card{
-    max-width: 450px;
-    padding: 10px;
-   }
-
-   .card__row {
-
-    padding-bottom: 0.2rem;
-  }
-
-  .card__title {
-    font-weight: 600;
-    font-size: 2.2rem;
-    margin: 1rem 0 1.5rem;
-
-  }
-  .card__col span{
-    font-size: 1rem;
-
-  }
-
-  .card__col {
-    padding-right: 0.6rem;
-  }
-
-
-  /* --------header------- */
-  .navbar .container-fluid{
-    margin: 0;
-  }
-  .header{
-
-    display: flex;
-    justify-content: flex-start;
-  }
-  .navbar-right{
-    display: none;
-  }
-
-
-
-
- }
