--- a/profile.css
+++ b/profile.css
@@ -1,88 +1,219 @@
+
 /* Reset */
-:root{
-    --primary-color: #e85a4f;
-    --background-color: #ffffff;
-    --secon-color: #9da2ad;
-    --grey: #7a7a7b;
-    --white: #ffffff;
-    --pink: #e98074;
-}
-*{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 a{
-    color: unset;
-    text-decoration: none !important;
+    text-decoration: none;
 }
-body,
-html{
-    background-color: var(--background-color);
-    scroll-behavior: smooth;
+.text-danger{
+    color: #e85a4f !important;
+}
+.btn-twitter{
+    color: #1da1f2;
+    padding: 5px;
+    border-radius: 5px;
+    background: rgba(29,161,242,.08);
+    transition: 0.2s;
+  }
+  .btn-twitter:hover{
+    color: #ffffff;
+    background: #1da1f2;
+  }
+  .btn-instagram{
+    padding: 5px;
+    border-radius: 5px;
+    color: #5851db;
+    background: rgba(88,81,219,.08);
+    transition: 0.2s;
+  }
+  .btn-instagram:hover{
+    color: #ffffff;
+    background: #5851db;
+  }
+  .btn-facebook{
+   padding: 5px;
+   border-radius: 5px;
+   color: #3b5998;
+   background: rgba(59,89,152,.08);
+   transition: 0.2s;
+ }
+ .btn-facebook:hover{
+   color: #ffffff;
+   background: #3b5998;
+ }
+/* End Reset */
+
+/* Navigation */
+.nav-header-hover:hover{
+    color: #e85a4f !important;
+}
+/* End Navigation */
+
+/* Profile */
+.emp-profile{
+    padding: 3%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border-radius: 0.5rem;
+    background: #fff;
+}
+.profile-img{
+    text-align: center;
+}
+.profile-img img{
+    width: 70%;
+    height: 100%;
+}
+.profile-img .file {
     position: relative;
-    overflow-x: hidden;
-}
-body{
-  background-color: #f1f3f6;
-}
-.space-25-left{
-    margin-left: 25px;
-}
-.space-50-left{
-    margin-left: 50px;
-}
-.space-100-left{
-    margin-left: 100px;
-}
-.space-200-left{
-    margin-left: 200px;
-}
-
-/* Nav bar */
-.navbar{
-    background-color: var(--primary-color);
-    color: var(--white);
+    overflow: hidden;
+    margin-top: -20%;
+    width: 70%;
     border: none;
+    border-radius: 0;
+    font-size: 15px;
+    background: #212529b8;
 }
-.navbar .container-fluid{
-  margin: auto 100px;
-}
-.navbar .container-fluid .navbar-header .navbar-brand{
-    font-weight: 700;
-}
-
-.container{
-    width: 100vw;
-    margin-top: 80px;
-    padding: 20px;
-    background-color: var(--white);
-}
-.container .row .col-md-12 .card .card-body .row{
-    padding: 20px;
-}
-.container .row .col-md-12 .card .card-body .row .col-md-12{
-    margin-top: 20px;
-}
-.container .row .col-md-12 .card .card-body .row .col-md-12 .tab-pane .row .col-md-3 .card{
-    width: 100vw;
-    border-radius: 20px;
-    transition: .3s ease-in-out;
-}
-.container .row .col-md-12 .card .card-body .row .col-md-12 .tab-pane .row .col-md-3 .card img{
-    border-radius: 20px;
-    height: 200px;
-}
-.container .row .col-md-12 .card .card-body .row .col-md-12 .tab-pane .row .col-md-3 .card .card-body{
-    padding: 15px;
-    height: 200px;
-}
-.container .row .col-md-12 .card .card-body .row .col-md-12 .tab-pane .row .col-md-3 .card .card-body .btn-primary{
+.profile-img .file input {
     position: absolute;
-    bottom: 20px;
+    opacity: 0;
+    right: 0;
+    top: 0;
 }
-.container .row .col-md-12 .card .card-body .row .col-md-12 .tab-pane .row .col-md-3 .card:hover{
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
-        rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-}
+/* End Profile */
+
+/* Footer */
+.footer {
+    background: #f6f9ff;
+    padding: 0 0 30px 0;
+    font-size: 14px;
+  }
+  .footer .footer-top {
+    border-top: 1px solid #e1ecff;
+    border-bottom: 1px solid #e1ecff;
+    padding: 60px 0 30px 0;
+  }
+  
+  .footer .footer-top .footer-info {
+    margin-bottom: 30px;
+    text-align: justify;
+  }
+  
+  .footer .footer-top .footer-info .logo span {
+    font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: #012970;
+    margin-top: 3px;
+  }
+  
+  .footer .footer-top .footer-info p {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 0;
+  }
+  
+  .footer .footer-top .social-links a {
+    font-size: 20px;
+    display: inline-block;
+    color: rgba(1, 41, 112, 0.5);
+    line-height: 0;
+    margin-right: 10px;
+    transition: 0.3s;
+  }
+  
+  .footer .footer-top .social-links a:hover {
+    color: #012970;
+  }
+  
+  .footer .footer-top h4 {
+    font-size: 16px;
+    font-weight: bold;
+    color: #012970;
+    text-transform: uppercase;
+    position: relative;
+    padding-bottom: 12px;
+  }
+  
+  .footer .footer-top .footer-links {
+    margin-bottom: 30px;
+  }
+  
+  .footer .footer-top .footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .footer .footer-top .footer-links ul i {
+    padding-right: 2px;
+    color: #d0d4fc;
+    font-size: 12px;
+    line-height: 0;
+  }
+  
+  .footer .footer-top .footer-links ul li {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+  }
+  
+  .footer .footer-top .footer-links ul li:first-child {
+    padding-top: 0;
+  }
+  
+  .footer .footer-top .footer-links ul a {
+    color: #013289;
+    transition: 0.3s;
+    display: inline-block;
+    line-height: 1;
+  }
+  
+  .footer .footer-top .footer-links ul a:hover {
+    color: #4154f1;
+  }
+  
+  .footer .footer-top .footer-contact p {
+    line-height: 26px;
+  }
+  
+  .footer .copyright {
+    text-align: center;
+    padding-top: 30px;
+    color: #012970;
+  }
+  
+  .footer .credits {
+    padding-top: 10px;
+    text-align: center;
+    font-size: 13px;
+    color: #012970;
+  }
+/* End Footer */
+
+/* Big tablet to 1200px; */
+@media only screen  and (min-width:1200px){
+    .for-mobile{
+        display: none;
+    }
+  }
+   
+  /* Small tablet to big tablet from 768x to 1023px */
+  @media only screen and (min-width:1023px){
+      .for-mobile{
+          display: none;
+      }
+  }
+   
+  /* Small phones to small tablets */
+  @media only screen and (max-width: 767px){
+      .for-desktop{
+          display: none;
+      }
+  }
+   
+  /* Small phones from 0 to 480px; */
+  @media only screen and (max-width: 480px){
+      .for-desktop{
+          display: none;
+      }
+      
+  }
