--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@
  /* End Reset  */
   
 body{
-  font-family: "Nunito", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
+/* End Reset */
 
 /* Section */
 
