--- a/page-listing/fashion.css
+++ b/page-listing/fashion.css
@@ -1,38 +1,230 @@
-ul li{
-    list-style: none;
-}
-ul li .active{
-    color: #e85a4f;
-}
-a{
-    color: #000;
-}
-a:hover{
-    color: #e85a4f;
-}
 /* Reset */
+:root {
+    scroll-behavior: smooth;
+  }
+  
+  a {
+    color: #4154f1;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: #717ff5;
+    text-decoration: none;
+  }
+  ul li{
+    list-style: none;
+  }
+  
+body{
+  font-family: 'Poppins', sans-serif;
+}
+  html::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  html::-webkit-scrollbar-track {
+    background: rgb(179, 177, 177);
+    border-radius: 10px;
+  }
+  
+  html::-webkit-scrollbar-thumb {
+    background: rgb(136, 136, 136);
+    border-radius: 10px;
+  }
+  
+  html::-webkit-scrollbar-thumb:hover {
+    background: rgb(100, 100, 100);
+    border-radius: 10px;
+  }
+  
+  html::-webkit-scrollbar-thumb:active {
+    background: rgb(68, 68, 68);
+    border-radius: 10px;
+  }
+  .text-danger{
+      color: #e85a4f;
+  }
+/* End Reset */
+
+/* Navbar */
+.navbar-brand{
+    color: #e85a4f;
+    font-weight: 700;
+}
+.navbar-brand:hover{
+    color: #e85a4f;
+}
+.form-control{
+    border: none;
+    background-color: #f7f9fc;
+}
+.form-control:focus{
+    box-shadow: none;
+}
+.btn{
+    font-size: 20px;
+    color: #e85a4f;
+    transition: 0.2s;
+}
+.btn:hover{
+    color: #ffffff;
+    background-color: #e85a4f;
+    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
+}
 .btn:focus{
     box-shadow: none;
 }
-.btn-outline-secondary {
-    border-color: #dae1e7 !important;
-    color: #4b566b !important;
+/* End Navbar */
+
+/* Filters */
+.btn-filters{
+    color: #ffffff;
+    font-size: 16px;
+    background: #e85a4f;
+    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
 }
-.btn-outline-secondary:hover {
-    color: #000;
-    background-color: #f3f5f9;
-    border-color: #f3f5f9;
+.btn-filters:hover{
+    box-shadow: none;
 }
-.remove-border{
-    border: none;
+.category-hover:hover{
+    color: #e85a4f !important;
 }
-/* End Reset */
-.nav-link-style{
+/* End Filters */
+
+/* Footer */
+.footer {
+    background: #f6f9ff;
+    padding: 0 0 30px 0;
+    font-size: 14px;
+  }
+  .footer .footer-top {
+    border-top: 1px solid #e1ecff;
+    border-bottom: 1px solid #e1ecff;
+    padding: 60px 0 30px 0;
+  }
+  
+  .footer .footer-top .footer-info {
+    margin-bottom: 30px;
+    text-align: justify;
+  }
+  
+  .footer .footer-top .footer-info .logo span {
+    font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: #012970;
+    margin-top: 3px;
+  }
+  
+  .footer .footer-top .footer-info p {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 0;
+  }
+  
+  .footer .footer-top .social-links a {
+    font-size: 20px;
+    display: inline-block;
+    color: rgba(1, 41, 112, 0.5);
+    line-height: 0;
+    margin-right: 10px;
+    transition: 0.3s;
+  }
+  
+  .footer .footer-top .social-links a:hover {
+    color: #012970;
+  }
+  
+  .footer .footer-top h4 {
+    font-size: 16px;
+    font-weight: bold;
+    color: #012970;
+    text-transform: uppercase;
+    position: relative;
+    padding-bottom: 12px;
+  }
+  
+  .footer .footer-top .footer-links {
+    margin-bottom: 30px;
+  }
+  
+  .footer .footer-top .footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .footer .footer-top .footer-links ul i {
+    padding-right: 2px;
+    color: #d0d4fc;
+    font-size: 12px;
+    line-height: 0;
+  }
+  
+  .footer .footer-top .footer-links ul li {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+  }
+  
+  .footer .footer-top .footer-links ul li:first-child {
+    padding-top: 0;
+  }
+  
+  .footer .footer-top .footer-links ul a {
+    color: #013289;
+    transition: 0.3s;
+    display: inline-block;
+    line-height: 1;
+  }
+  
+  .footer .footer-top .footer-links ul a:hover {
+    color: #4154f1;
+  }
+  
+  .footer .footer-top .footer-contact p {
+    line-height: 26px;
+  }
+  
+  .footer .copyright {
+    text-align: center;
+    padding-top: 30px;
+    color: #012970;
+  }
+  
+  .footer .credits {
+    padding-top: 10px;
+    text-align: center;
+    font-size: 13px;
+    color: #012970;
+  }
+/* End Footer */
+
+/* Amination */
+.fade-out{
+    transition: all 0.3s;
+}
+.fade-out:hover{
+    transform: scale(1.01);
+}
+.card{
+    transition: all 300ms;
+}
+.card-hover:hover{
+    transform: translateY(-10px);
+    box-shadow: rgba(217, 210, 200, 0.51) 6px 6px 16px 0px,
+                rgba(255, 255, 255, 0.83) -6px -6px 26px 0px;
+}
+.hover-color-red:hover{
+    transition: 0.3s;
     color: #e85a4f;
 }
-.nav-link-style:hover{
-    color: #ec2213;
+.text-hover:hover{
+    text-decoration: underline;
 }
+/* End Animation */
+
 /* Big tablet to 1200px; */
 @media only screen  and (min-width:1200px){
     .for-mobile{
@@ -61,4 +253,3 @@ a:hover{
       }
       
   }
-  
