--- a/charity.css
+++ b/charity.css
@@ -10,9 +10,6 @@
 }
 *{
     font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 a{
     color: unset;
@@ -20,87 +17,57 @@ a{
 }
 body,
 html{
-    background-color: var(--background-color);
     scroll-behavior: smooth;
-    position: relative;
-    overflow-x: hidden;
 }
-body{
-  background-color: #f1f3f6;
+.bg-danger{
+  background: #e85a4f !important;
 }
-.space-25-left{
-    margin-left: 25px;
+/* Navbar */
+.navbar-brand{
+  color: #ffffff;
+  font-weight: 700;
 }
-.space-50-left{
-    margin-left: 50px;
+.form-control{
+  border: none;
+  background-color: #f7f9fc;
 }
-.space-100-left{
-    margin-left: 100px;
+.form-control:focus{
+  box-shadow: none;
 }
-.space-200-left{
-    margin-left: 200px;
+.btn{
+  font-size: 20px;
+  color: #ffffff;
+  transition: 0.2s;
 }
+.btn:hover{
+  color: #ffffff;
+  transform: scale(1.05);
+}
+.btn:focus{
+  box-shadow: none;
+}
+/* End Navbar */
 
-/* Nav bar */
-.navbar{
-    background-color: var(--primary-color);
-    color: var(--white);
-    border: none;
-}
-.navbar .container-fluid{
-  margin: auto 100px;
-}
-.navbar .container-fluid .navbar-header .navbar-brand{
-    font-weight: 700;
-}
+
 /* Home */
 .home .free-collection{
     height: 100vh;
-    width: 100vw;
+    padding-top: 50px;
     background-color: var(--primary-color);
 }
-.home .free-collection .detail{
-    position: relative;
-    top: 50%;
-    left: 5%;
-    transform: translateY(-50%);
-    display: block;
-}
-.home .detail .slogan{
-    font-size: 50px;
+.slogan{
+    font-size: 40px;
     text-transform: uppercase;
-    color: var(--white);
 }
-.home .detail .script{
-    color: var(--white);
+.btn-book{
+  transition: 0.2s;
 }
-.home .free-collection img{
-    width: 600px;
-    position: relative;
-    top: 40%;
-    left: 55%;
-    transform: translateY(-50%);
+.btn-book:hover{
+    transform: scale(1.01);
 }
-.home .free-collection .detail .btn{
-    color: var(--primary-color);
-    transition: .3s ease-in-out;
-}
-.home .free-collection .detail .btn:hover{
-    transform: scale(1.1);
-}
-.home .free-collection .detail .btn:focus{
-    outline: none;
-}
-.modal .modal-dialog .modal-content .modal-body form .form-row .btn{
-    background-color: var(--primary-color);
-    border: none;
-}
-.modal .modal-dialog .modal-footer button{
-    margin-top: 20px;
-}
-
 .home .transfer{
     height: 100vh;
+    padding-top: 100px;
     overflow: hidden;
     background-position: center;
     background-size: cover;
@@ -108,18 +75,10 @@ body{
     background-attachment: fixed;
 }
 .home .transfer .card{
-    position: relative;
-    top: 40%;
-    left: 10%;
-    transform: translateY(-50%);
-    width: 500px;
-    height: 250px;
+    width: 100%;
+    height: 240px;
 }
 .home .transfer .detail{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%);
     color: var(--primary-color);
 }
 /* card */
@@ -132,46 +91,48 @@ body{
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5), -1px -1px 2px #aaa,
       1px 1px 2px #555;
     backdrop-filter: blur(0.8rem);
-    padding: 1.5rem;
+    padding: 0.8rem;
     border-radius: 1rem;
   }
   .card__row {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
   }
   
   .card__title {
     font-weight: 600;
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: var(--primary-color);
-    margin: 1rem 0 1.5rem;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
   }
   
   .card__col {
-    padding-right: 2rem;
+    padding-right: 0.9rem;
   }
   .card__col span{
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     color: #fff;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
   }
   .card__label {
+    width: 205px;
+    font-size: 1.2rem;
     display: block;
     color: #fff;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
     font-weight: 400;
   }
-  
+
   .card__chip {
     align-self: flex-end;
   }
-  
+
   .card__chip img {
     width: 3rem;
+    vertical-align: none;
   }
-  
+
   .card__brand {
     font-size: 3rem;
     color: #fff;
@@ -181,158 +142,146 @@ body{
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
   }
 
-/* footer */
-footer{
-    bottom: 0px;
-    width: 100%;
-    background: #111;
-    position: relative;
-    z-index: 2;
-  }
-  .main-content{
-    display: flex;
-  }
-  .main-content .box{
-    flex-basis: 50%;
-    padding: 10px 20px;
-  }
-  .box h2{
-    font-size: 1.125rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    color:var(--grey);
-  }
-  .box .content{
-    margin: 20px 0 0 0;
-    position: relative;
-  }
-  .box .content:before{
-    position: absolute;
-    content: '';
-    top: -10px;
-    height: 2px;
-    width: 100%;
-    background: #1a1a1a;
-  }
-  .box .content:after{
-    position: absolute;
-    content: '';
-    height: 2px;
-    width: 15%;
-    background: var(--primary-color);
-    top: -10px;
-  }
-  .left .content p{
-    color:var(--grey);
-    text-align: justify;
-  }
-  .left .content .social{
-    margin: 20px 0 0 0;
-  }
-  .left .content .social a{
-    padding: 0 2px;
-    color:var(--grey);
-  }
-  .left .content .social a span{
-    height: 40px;
-    width: 40px;
-    background: #1a1a1a;
-    line-height: 40px;
-    text-align: center;
-    font-size: 18px;
-    border-radius: 5px;
-    transition: 0.3s;
-  }
-  .left .content .social a span:hover{
-    background: var(--primary-color);
-  }
-  .center .content .fas{
-    font-size: 1.4375rem;
-    background: #1a1a1a;
-    color:var(--grey);
-    height: 45px;
-    width: 45px;
-    line-height: 45px;
-    text-align: center;
-    border-radius: 50%;
-    transition: 0.3s;
-    cursor: pointer;
-  }
-  .center .content .fas:hover{
-    background: var(--primary-color);
-  }
-  .center .content .text{
-    font-size: 1.0625rem;
-    font-weight: 500;
-    padding-left: 10px;
-    color:var(--grey);
-  }
-  .center .content .phone{
-    margin: 15px 0;
-  }
-  .right form .text{
-    font-size: 1.0625rem;
-    margin-bottom: 2px;
-    color:var(--grey);
-  }
-  .right form .msg{
-    margin-top: 10px;
-  }
-  .right form input, .right form textarea{
-    width: 100%;
-    font-size: 1.0625rem;
-    background: #151515;
-    padding-left: 10px;
-    border: 1px solid #222222;
-  }
-  .right form input:focus,
-  .right form textarea:focus{
-    outline-color: #3498db;
-  }
-  .right form input{
-    height: 35px;
-  }
-  .right form .btn{
-    margin-top: 10px;
-  }
-  .right form .btn button{
-    height: 40px;
-    width: 100%;
-    border: none;
-    outline: none;
-    font-size: 1.0625rem;
-    font-weight: 500;
-    cursor: pointer;
-    transition: .3s;
-  }
-  .right form .btn button:hover{
-    background: var(--primary-color);
-    color: var(--white);
-  }
-  .bottom center{
-    padding: 5px;
-    font-size: 0.9375rem;
-    background: #151515;
-  }
-  .bottom center span{
-    color:var(--grey);
-  }
-  .bottom center a{
-    text-decoration: none;
-  }
-  .bottom center a:hover{
-    text-decoration: underline;
-  }
-  @media screen and (max-width: 900px) {
-    footer{
-      position: relative;
-      bottom: 0px;
-    }
-    .main-content{
-      flex-wrap: wrap;
-      flex-direction: column;
-    }
-    .main-content .box{
-      margin: 5px 0;
+  @media screen and(max-width: 800px)  {
+    .home .transfer .col-md-6 .card{
+      width: 100%;
     }
   }
+
+/* Footer */
+.footer {
+  background: #f6f9ff;
+  padding: 0 0 30px 0;
+  font-size: 14px;
+}
+.footer .footer-top {
+  border-top: 1px solid #e1ecff;
+  border-bottom: 1px solid #e1ecff;
+  padding: 60px 0 30px 0;
+}
+
+.footer .footer-top .footer-info {
+  margin-bottom: 30px;
+  text-align: justify;
+}
+
+.footer .footer-top .footer-info .logo span {
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: #012970;
+  margin-top: 3px;
+}
+
+.footer .footer-top .footer-info p {
+  font-size: 14px;
+  line-height: 24px;
+  margin-bottom: 0;
+}
+
+.footer .footer-top .social-links a {
+  font-size: 20px;
+  display: inline-block;
+  color: rgba(1, 41, 112, 0.5);
+  line-height: 0;
+  margin-right: 10px;
+  transition: 0.3s;
+}
+
+.footer .footer-top .social-links a:hover {
+  color: #012970;
+}
+
+.footer .footer-top h4 {
+  font-size: 16px;
+  font-weight: bold;
+  color: #012970;
+  text-transform: uppercase;
+  position: relative;
+  padding-bottom: 12px;
+}
+
+.footer .footer-top .footer-links {
+  margin-bottom: 30px;
+}
+
+.footer .footer-top .footer-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer .footer-top .footer-links ul i {
+  padding-right: 2px;
+  color: #d0d4fc;
+  font-size: 12px;
+  line-height: 0;
+}
+
+.footer .footer-top .footer-links ul li {
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+.footer .footer-top .footer-links ul li:first-child {
+  padding-top: 0;
+}
+
+.footer .footer-top .footer-links ul a {
+  color: #013289;
+  transition: 0.3s;
+  display: inline-block;
+  line-height: 1;
+}
+
+.footer .footer-top .footer-links ul a:hover {
+  color: #4154f1;
+}
+
+.footer .footer-top .footer-contact p {
+  line-height: 26px;
+}
+
+.footer .copyright {
+  text-align: center;
+  padding-top: 30px;
+  color: #012970;
+}
+
+.footer .credits {
+  padding-top: 10px;
+  text-align: center;
+  font-size: 13px;
+  color: #012970;
+}
+/* End Footer */
+
+  /* Big tablet to 1200px; */
+@media only screen  and (min-width:1200px){
+  .for-mobile{
+      display: none;
+  }
+}
+ 
+/* Small tablet to big tablet from 768x to 1023px */
+@media only screen and (min-width:1023px){
+    .for-mobile{
+        display: none;
+    }
+}
+ 
+/* Small phones to small tablets */
+@media only screen and (max-width: 767px){
+    .for-desktop{
+        display: none;
+    }
+}
+ 
+/* Small phones from 0 to 480px; */
+@media only screen and (max-width: 480px){
+    .for-desktop{
+        display: none;
+    }
+    
+}
