--- a/page-listing/fashion.css
+++ b/page-listing/fashion.css
@@ -45,6 +45,9 @@ body{
   .text-danger{
       color: #e85a4f;
   }
+  .form-check-input:focus{
+    box-shadow: none;
+  }
 /* End Reset */
 
 /* Navbar */
