--- a/style.css
+++ b/style.css
@@ -1,115 +1,140 @@
 /* f7f9fc */
+
+
 /* Reset */
+
 :root {
     scroll-behavior: smooth;
-  }
-  
-  a {
+}
+
+a {
     color: #4154f1;
     text-decoration: none;
-  }
-  
-  a:hover {
+}
+
+a:hover {
     color: #717ff5;
     text-decoration: none;
-  }
-  ul li{
-    list-style: none;
-  }
-  
-body{
-  font-family: 'Poppins', sans-serif;
 }
+
+ul li {
+    list-style: none;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 html::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
 
 html::-webkit-scrollbar-track {
-  background: rgb(179, 177, 177);
-  border-radius: 10px;
+    background: rgb(179, 177, 177);
+    border-radius: 10px;
 }
 
 html::-webkit-scrollbar-thumb {
-  background: rgb(136, 136, 136);
-  border-radius: 10px;
+    background: rgb(136, 136, 136);
+    border-radius: 10px;
 }
 
 html::-webkit-scrollbar-thumb:hover {
-  background: rgb(100, 100, 100);
-  border-radius: 10px;
+    background: rgb(100, 100, 100);
+    border-radius: 10px;
 }
 
 html::-webkit-scrollbar-thumb:active {
-  background: rgb(68, 68, 68);
-  border-radius: 10px;
+    background: rgb(68, 68, 68);
+    border-radius: 10px;
 }
+
+
 /* End Reset */
+
 
 /* Section */
 
 .section-header {
-  text-align: center;
-  padding-bottom: 40px;
+    text-align: center;
+    padding-bottom: 40px;
 }
+
 .section-header p {
-  margin: 10px 0 0 0;
-  padding: 0;
-  font-size: 38px;
-  line-height: 42px;
-  font-weight: 700;
-  color: #e85a4f;
+    margin: 10px 0 0 0;
+    padding: 0;
+    font-size: 38px;
+    line-height: 42px;
+    font-weight: 700;
+    color: #e85a4f;
 }
 
 @media (max-width: 768px) {
-  .section-header p {
-    font-size: 28px;
-    line-height: 32px;
-  }
+    .section-header p {
+        font-size: 28px;
+        line-height: 32px;
+    }
 }
+
+
 /* End Section */
 
+
 /* Navbar */
-.navbar-brand{
+
+.navbar-brand {
     color: #e85a4f;
     font-weight: 700;
 }
-.navbar-brand:hover{
+
+.navbar-brand:hover {
     color: #e85a4f;
 }
-.form-control{
+
+.form-control {
     border: none;
     background-color: #f7f9fc;
 }
-.form-control:focus{
+
+.form-control:focus {
     box-shadow: none;
 }
-.btn{
+
+.btn {
     font-size: 20px;
     color: #e85a4f;
     transition: 0.2s;
 }
-.btn:hover{
+
+.btn:hover {
     color: #ffffff;
     background-color: #e85a4f;
     box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
 }
-.btn:focus{
+
+.btn:focus {
     box-shadow: none;
 }
+
+
 /* End Navbar */
 
+
 /* Hero */
-.hero{
-  height: 100vh;
-  background-image: url('resources/images/hero/background.png');
-  background-size: cover;
+
+.hero {
+    height: 100vh;
+    background-image: url('resources/images/hero/background.png');
+    background-size: cover;
 }
+
 .hero h1 {
     margin: 0;
     font-size: 48px;
     font-weight: 700;
     color: #e85a4f;
 }
+
 .hero .btn-get-started {
     margin-top: 30px;
     line-height: 0;
@@ -119,234 +144,290 @@ html::-webkit-scrollbar-thumb:active {
     color: #fff;
     background: #e85a4f;
     box-shadow: 0px 5px 30px rgba(253, 90, 79, 0.4);
-  }
-  .hero .btn-get-started span {
+}
+
+.hero .btn-get-started span {
     font-weight: 600;
     font-size: 16px;
     letter-spacing: 1px;
-  }
-  
-  .hero .btn-get-started i {
+}
+
+.hero .btn-get-started i {
     margin-left: 5px;
     font-size: 18px;
     transition: 0.3s;
-  }
-  
-  .hero .btn-get-started:hover i {
+}
+
+.hero .btn-get-started:hover i {
     transform: translateY(5px);
-  }
-  
+}
+
+
 /* End Hero */
 
+
 /* Tag-box */
+
 .tag-box {
-  padding: 70px 0 60px;
+    padding: 70px 0 60px;
 }
 
 .tag-box .count-box {
-  display: flex;
-  align-items: center;
-  padding: 30px;
-  width: 100%;
-  background: #fff;
-  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
 }
 
 .tag-box .count-box i {
-  font-size: 42px;
-  line-height: 0;
-  margin-right: 20px;
-  color: #4154f1;
+    font-size: 42px;
+    line-height: 0;
+    margin-right: 20px;
+    color: #4154f1;
 }
 
 .tag-box .count-box span {
-  font-size: 36px;
-  display: block;
-  font-weight: 600;
-  color: #0b198f;
+    font-size: 36px;
+    display: block;
+    font-weight: 600;
+    color: #0b198f;
 }
 
 .tag-box .count-box p {
-  padding: 0;
-  margin: 0;
-  font-family: "Nunito", sans-serif;
-  font-size: 14px;
+    padding: 0;
+    margin: 0;
+    font-family: "Nunito", sans-serif;
+    font-size: 14px;
 }
+
+
 /* End Tag-box */
 
+
 /* Categories */
-.remove-underline{
+
+.remove-underline {
     text-decoration: none;
 }
-.remove-border{
+
+.remove-border {
     border: none;
 }
+
+
 /* End Categories */
 
+
 /* New */
-.card-title{
+
+.card-title {
     cursor: pointer;
 }
+
+
 /* End New */
 
+
 /* Footer */
+
 .footer {
     background: #f6f9ff;
     padding: 0 0 30px 0;
     font-size: 14px;
-  }
-  .footer .footer-top {
+}
+
+.footer .footer-top {
     border-top: 1px solid #e1ecff;
     border-bottom: 1px solid #e1ecff;
     padding: 60px 0 30px 0;
-  }
-  
-  .footer .footer-top .footer-info {
+}
+
+.footer .footer-top .footer-info {
     margin-bottom: 30px;
     text-align: justify;
-  }
-  
-  .footer .footer-top .footer-info .logo span {
+}
+
+.footer .footer-top .footer-info .logo span {
     font-size: 30px;
     font-weight: 700;
     letter-spacing: 1px;
     color: #012970;
     margin-top: 3px;
-  }
-  
-  .footer .footer-top .footer-info p {
+}
+
+.footer .footer-top .footer-info p {
     font-size: 14px;
     line-height: 24px;
     margin-bottom: 0;
-  }
-  
-  .footer .footer-top .social-links a {
+}
+
+.footer .footer-top .social-links a {
     font-size: 20px;
     display: inline-block;
     color: rgba(1, 41, 112, 0.5);
     line-height: 0;
     margin-right: 10px;
     transition: 0.3s;
-  }
-  
-  .footer .footer-top .social-links a:hover {
+}
+
+.footer .footer-top .social-links a:hover {
     color: #012970;
-  }
-  
-  .footer .footer-top h4 {
+}
+
+.footer .footer-top h4 {
     font-size: 16px;
     font-weight: bold;
     color: #012970;
     text-transform: uppercase;
     position: relative;
     padding-bottom: 12px;
-  }
-  
-  .footer .footer-top .footer-links {
+}
+
+.footer .footer-top .footer-links {
     margin-bottom: 30px;
-  }
-  
-  .footer .footer-top .footer-links ul {
+}
+
+.footer .footer-top .footer-links ul {
     list-style: none;
     padding: 0;
     margin: 0;
-  }
-  
-  .footer .footer-top .footer-links ul i {
+}
+
+.footer .footer-top .footer-links ul i {
     padding-right: 2px;
     color: #d0d4fc;
     font-size: 12px;
     line-height: 0;
-  }
-  
-  .footer .footer-top .footer-links ul li {
+}
+
+.footer .footer-top .footer-links ul li {
     padding: 10px 0;
     display: flex;
     align-items: center;
-  }
-  
-  .footer .footer-top .footer-links ul li:first-child {
+}
+
+.footer .footer-top .footer-links ul li:first-child {
     padding-top: 0;
-  }
-  
-  .footer .footer-top .footer-links ul a {
+}
+
+.footer .footer-top .footer-links ul a {
     color: #013289;
     transition: 0.3s;
     display: inline-block;
     line-height: 1;
-  }
-  
-  .footer .footer-top .footer-links ul a:hover {
+}
+
+.footer .footer-top .footer-links ul a:hover {
     color: #4154f1;
-  }
-  
-  .footer .footer-top .footer-contact p {
+}
+
+.footer .footer-top .footer-contact p {
     line-height: 26px;
-  }
-  
-  .footer .copyright {
+}
+
+.footer .copyright {
     text-align: center;
     padding-top: 30px;
     color: #012970;
-  }
-  
-  .footer .credits {
+}
+
+.footer .credits {
     padding-top: 10px;
     text-align: center;
     font-size: 13px;
     color: #012970;
-  }
+}
+
+
 /* End Footer */
 
+
+/* Back to top */
+
+#btn-back-to-top {
+    background: #e85a4f;
+    color: #ffffff;
+    position: fixed;
+    bottom: 70px;
+    right: 20px;
+    display: none;
+    z-index: 99;
+}
+
+#btn-back-to-top:hover {
+    box-shadow: none;
+    background: #eb8c85;
+}
+
+
+/* End Back to top */
+
+
 /* Amination */
-.fade-out{
+
+.fade-out {
     transition: all 0.3s;
 }
-.fade-out:hover{
+
+.fade-out:hover {
     transform: scale(1.01);
 }
-.card{
+
+.card {
     transition: all 300ms;
 }
-.card-hover:hover{
+
+.card-hover:hover {
     transform: translateY(-10px);
-    box-shadow: rgba(217, 210, 200, 0.51) 6px 6px 16px 0px,
-                rgba(255, 255, 255, 0.83) -6px -6px 26px 0px;
+    box-shadow: rgba(217, 210, 200, 0.51) 6px 6px 16px 0px, rgba(255, 255, 255, 0.83) -6px -6px 26px 0px;
 }
-.hover-color-red:hover{
+
+.hover-color-red:hover {
     transition: 0.3s;
     color: #e85a4f;
 }
-.text-hover:hover{
+
+.text-hover:hover {
     text-decoration: underline;
 }
+
+
 /* End Animation */
 
+
 /* Big tablet to 1200px; */
-@media only screen  and (min-width:1200px){
-  .for-mobile{
-      display: none;
-  }
+
+@media only screen and (min-width:1200px) {
+    .for-mobile {
+        display: none;
+    }
 }
- 
+
+
 /* Small tablet to big tablet from 768x to 1023px */
-@media only screen and (min-width:1023px){
-    .for-mobile{
+
+@media only screen and (min-width:1023px) {
+    .for-mobile {
         display: none;
     }
 }
- 
+
+
 /* Small phones to small tablets */
-@media only screen and (max-width: 767px){
-    .for-desktop{
+
+@media only screen and (max-width: 767px) {
+    .for-desktop {
         display: none;
     }
 }
- 
+
+
 /* Small phones from 0 to 480px; */
-@media only screen and (max-width: 480px){
-    .for-desktop{
+
+@media only screen and (max-width: 480px) {
+    .for-desktop {
         display: none;
     }
-    
 }
