--- a/resources/css/items.css
+++ b/resources/css/items.css
@@ -1,56 +1,27 @@
 /* Reset */
 
-:root {
-    scroll-behavior: smooth;
-}
-
-a {
-    color: #4154f1;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #717ff5;
-    text-decoration: none;
-}
-
-ul li {
-    list-style: none;
-}
-
 body {
+    background: #f5f9fe;
     font-family: 'Poppins', sans-serif;
 }
 
-html::-webkit-scrollbar {
-    width: 10px;
+a {
+    text-decoration: none;
 }
 
-html::-webkit-scrollbar-track {
-    background: rgb(179, 177, 177);
-    border-radius: 10px;
+.form-control:focus {
+    box-shadow: none;
 }
 
-html::-webkit-scrollbar-thumb {
-    background: rgb(136, 136, 136);
-    border-radius: 10px;
+.form-control-input:focus {
+    border: #e85a4f 1px solid;
 }
 
-html::-webkit-scrollbar-thumb:hover {
-    background: rgb(100, 100, 100);
-    border-radius: 10px;
+.form-select:focus {
+    box-shadow: none;
 }
 
-html::-webkit-scrollbar-thumb:active {
-    background: rgb(68, 68, 68);
-    border-radius: 10px;
-}
-
-.text-danger {
-    color: #e85a4f;
-}
-
-.form-check-input:focus {
+.btn:focus {
     box-shadow: none;
 }
 
@@ -69,54 +40,100 @@ html::-webkit-scrollbar-thumb:active {
     color: #e85a4f;
 }
 
-.form-control {
+.search-box {
     border: none;
     background-color: #f7f9fc;
 }
 
-.form-control:focus {
-    box-shadow: none;
+.search-box:focus {
+    background-color: #f7f9fc;
 }
 
-.btn {
+.btn-search,
+.btn-nav {
     font-size: 20px;
     color: #e85a4f;
+    background: none;
+    border: none;
     transition: 0.2s;
 }
 
-.btn:hover {
+.btn-search:hover {
     color: #ffffff;
-    background-color: #e85a4f;
+    background: #e85a4f;
     box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
 }
 
-.btn:focus {
-    box-shadow: none;
+.btn-nav:hover {
+    color: #ffffff;
+    background: #e85a4f;
+    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
 }
 
 
 /* End Navbar */
 
+.info {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 70px;
+    z-index: 99;
+}
 
-/* Filters */
 
-.btn-filters {
-    color: #ffffff;
-    font-size: 16px;
+/* List */
+
+.list-group-item,
+.fa-arrow-right {
+    transition: 0.2s;
+}
+
+.list-group-item:hover {
+    background: #f5f9fe;
+}
+
+.list-group-item:hover .fa-arrow-right {
+    transform: translateX(10px);
+}
+
+
+/* End List */
+
+
+/* Items */
+
+.btn-submit-new-item {
+    border: #e85a4f 1px solid;
+    color: #e85a4f;
+    transition: 0.2s;
+}
+
+.btn-submit-new-item:hover {
     background: #e85a4f;
-    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
+    color: #ffffff;
 }
 
-.btn-filters:hover {
-    box-shadow: none;
+.img-fluid {
+    height: 200px;
+    width: 200px;
 }
 
-.category-hover:hover {
-    color: #e85a4f !important;
+.time {
+    color: #424767;
 }
 
 
-/* End Filters */
+/* Small phones from 0 to 480px; */
+
+@media only screen and (max-width: 480px) {
+    .img-fluid {
+        width: 350px;
+        height: 300px;
+    }
+}
+
+
+/* End Items */
 
 
 /* Footer */
@@ -233,60 +250,10 @@ html::-webkit-scrollbar-thumb:active {
 /* End Footer */
 
 
-/* Amination */
-
-.fade-out {
-    transition: all 0.3s;
-}
-
-.fade-out:hover {
-    transform: scale(1.01);
-}
-
-.card {
-    transition: all 300ms;
-}
-
-.card-hover:hover {
-    transform: translateY(-10px);
-    box-shadow: rgba(217, 210, 200, 0.51) 6px 6px 16px 0px, rgba(255, 255, 255, 0.83) -6px -6px 26px 0px;
-}
-
-.hover-color-red:hover {
-    transition: 0.3s;
-    color: #e85a4f;
-}
-
-.text-hover:hover {
-    text-decoration: underline;
-}
-
-
-/* End Animation */
-
-
 /* Big tablet to 1200px; */
 
 @media only screen and (min-width:1200px) {
     .for-mobile {
-        display: none;
-    }
-}
-
-
-/* Small tablet to big tablet from 768x to 1023px */
-
-@media only screen and (min-width:1023px) {
-    .for-mobile {
-        display: none;
-    }
-}
-
-
-/* Small phones to small tablets */
-
-@media only screen and (max-width: 767px) {
-    .for-desktop {
         display: none;
     }
 }
@@ -297,5 +264,10 @@ html::-webkit-scrollbar-thumb:active {
 @media only screen and (max-width: 480px) {
     .for-desktop {
         display: none;
+    }
+    .info {
+        position: -webkit-sticky;
+        position: sticky;
+        top: -100px;
     }
 }
