--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -1,56 +1,27 @@
 /* Reset */
 
-:root {
-    scroll-behavior: smooth;
-}
-
-a {
-    color: #4154f1;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #717ff5;
-    text-decoration: none;
-}
-
-ul li {
-    list-style: none;
-}
-
 body {
+    background: #f5f9fe;
     font-family: 'Poppins', sans-serif;
 }
 
-html::-webkit-scrollbar {
-    width: 10px;
+a {
+    text-decoration: none;
 }
 
-html::-webkit-scrollbar-track {
-    background: rgb(179, 177, 177);
-    border-radius: 10px;
+.form-control:focus {
+    box-shadow: none;
 }
 
-html::-webkit-scrollbar-thumb {
-    background: rgb(136, 136, 136);
-    border-radius: 10px;
+.form-control-input:focus {
+    border: #e85a4f 1px solid;
 }
 
-html::-webkit-scrollbar-thumb:hover {
-    background: rgb(100, 100, 100);
-    border-radius: 10px;
+.form-select:focus {
+    box-shadow: none;
 }
 
-html::-webkit-scrollbar-thumb:active {
-    background: rgb(68, 68, 68);
-    border-radius: 10px;
-}
-
-.text-danger {
-    color: #e85a4f;
-}
-
-.form-check-input:focus {
+.btn:focus {
     box-shadow: none;
 }
 
@@ -69,54 +40,160 @@ html::-webkit-scrollbar-thumb:active {
     color: #e85a4f;
 }
 
-.form-control {
+.search-box {
     border: none;
     background-color: #f7f9fc;
 }
 
-.form-control:focus {
-    box-shadow: none;
+.search-box:focus {
+    background-color: #f7f9fc;
 }
 
-.btn {
+.btn-search,
+.btn-nav {
     font-size: 20px;
     color: #e85a4f;
+    background: none;
+    border: none;
     transition: 0.2s;
 }
 
-.btn:hover {
+.btn-search:hover {
     color: #ffffff;
-    background-color: #e85a4f;
+    background: #e85a4f;
     box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
 }
 
-.btn:focus {
-    box-shadow: none;
+.btn-nav:hover {
+    color: #ffffff;
+    background: #e85a4f;
+    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
 }
 
 
 /* End Navbar */
 
 
-/* Filters */
+/* Information */
 
-.btn-filters {
-    color: #ffffff;
-    font-size: 16px;
+.info {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 70px;
+}
+
+
+/* List */
+
+.list-group-item,
+.fa-arrow-right {
+    transition: 0.2s;
+}
+
+.list-group-item:hover {
+    background: #f5f9fe;
+}
+
+.list-group-item:hover .fa-arrow-right {
+    transform: translateX(10px);
+}
+
+
+/* End List */
+
+.btn-save {
     background: #e85a4f;
-    box-shadow: 0px 5px 10px rgba(253, 90, 79, 0.4);
+    color: #ffffff;
+    transition: 0.2s;
 }
 
-.btn-filters:hover {
-    box-shadow: none;
-}
-
-.category-hover:hover {
-    color: #e85a4f !important;
+.btn-save:hover {
+    background: #161616;
+    color: #ffffff;
 }
 
 
-/* End Filters */
+/* End Information */
+
+
+/* Profile */
+
+.emp-profile {
+    padding: 3%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border-radius: 0.5rem;
+    background: #fff;
+}
+
+.profile-img {
+    text-align: center;
+}
+
+.profile-img img {
+    width: 70%;
+    height: 100%;
+}
+
+.profile-img .file {
+    position: relative;
+    overflow: hidden;
+    margin-top: -20%;
+    width: 70%;
+    border: none;
+    border-radius: 0;
+    font-size: 15px;
+    background: #212529b8;
+}
+
+.profile-img .file input {
+    position: absolute;
+    opacity: 0;
+    right: 0;
+    top: 0;
+}
+
+.btn-twitter {
+    color: #1da1f2;
+    padding: 5px;
+    border-radius: 5px;
+    background: rgba(29, 161, 242, .08);
+    transition: 0.2s;
+}
+
+.btn-twitter:hover {
+    color: #ffffff;
+    background: #1da1f2;
+}
+
+.btn-instagram {
+    padding: 5px;
+    border-radius: 5px;
+    color: #5851db;
+    background: rgba(88, 81, 219, .08);
+    transition: 0.2s;
+}
+
+.btn-instagram:hover {
+    color: #ffffff;
+    background: #5851db;
+}
+
+.btn-facebook {
+    padding: 5px;
+    border-radius: 5px;
+    color: #3b5998;
+    background: rgba(59, 89, 152, .08);
+    transition: 0.2s;
+}
+
+.btn-facebook:hover {
+    color: #ffffff;
+    background: #3b5998;
+}
+
+
+/* End Profile */
 
 
 /* Footer */
@@ -233,38 +310,6 @@ html::-webkit-scrollbar-thumb:active {
 /* End Footer */
 
 
-/* Amination */
-
-.fade-out {
-    transition: all 0.3s;
-}
-
-.fade-out:hover {
-    transform: scale(1.01);
-}
-
-.card {
-    transition: all 300ms;
-}
-
-.card-hover:hover {
-    transform: translateY(-10px);
-    box-shadow: rgba(217, 210, 200, 0.51) 6px 6px 16px 0px, rgba(255, 255, 255, 0.83) -6px -6px 26px 0px;
-}
-
-.hover-color-red:hover {
-    transition: 0.3s;
-    color: #e85a4f;
-}
-
-.text-hover:hover {
-    text-decoration: underline;
-}
-
-
-/* End Animation */
-
-
 /* Big tablet to 1200px; */
 
 @media only screen and (min-width:1200px) {
@@ -283,19 +328,15 @@ html::-webkit-scrollbar-thumb:active {
 }
 
 
-/* Small phones to small tablets */
-
-@media only screen and (max-width: 767px) {
-    .for-desktop {
-        display: none;
-    }
-}
-
-
 /* Small phones from 0 to 480px; */
 
 @media only screen and (max-width: 480px) {
     .for-desktop {
         display: none;
+    }
+    .info {
+        position: -webkit-sticky;
+        position: sticky;
+        top: -100px;
     }
 }
